mmc-utils: Documentation: Add missing entry for "writeprotect user get" command
This commit adds missing documentation for the "writeprotect user get"
command to both the man page (mmc.1) and the documentation page
(docs/HOWTO.rst).

The "writeprotect user get" command prints the user areas write protect
configuration for the specified device.

Signed-off-by: Avri Altman <avri.altman@wdc.com>
Link: https://lore.kernel.org/r/20250210063947.3298-1-avri.altman@wdc.com
Signed-off-by: Ulf Hansson <ulf.hansson@linaro.org>

--- a/mmc.1
+++ b/mmc.1
@@ -27,6 +27,9 @@ If \fInumber\fR is passed (0 or 1), only protect that specified eMMC boot partit
 .br
 It will be write-protected until the next boot.
 .TP
+.BI writeprotect " " user " " get " " \fIdevice\fR
+Print the user areas write protect configuration for <device>.
+.TP
 .BI writeprotect " " user " " set " " \fItype\fR " " \fIstart\-block\fR " " \fIblocks\fR " " \fIdevice\fR
 Set the write protect configuration for the specified region of the user area for the device.
 .br
